fix mobile navbar z-index

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -166,6 +166,6 @@ body {
       bottom: 0;
       left: 0;
       right: 0;
-      z-index: 1000;
+      z-index: 100;
     }
   }
